--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>You have <%= data.book_count %> books in your library</p>
+    <%- include("viewBy"); -%>
   </body>
 </html>
