Created specific views for each book in a category

--- a/views/difficultyList.ejs
+++ b/views/difficultyList.ejs
@@ -9,7 +9,7 @@
             Fields
         </h1>
         <% for (let i=0; i < data.length; i++) {%>
-            <a href=""><%= data[i].difficulty %></a>
+            <a href="<%= data[i].url %>"><%= data[i].difficulty %></a>
             <br></br>
         <% } %>          
     </body>
