--- a/views/authorList.ejs
+++ b/views/authorList.ejs
@@ -9,8 +9,7 @@
             Fields
         </h1>
         <% for (let i=0; i < data.length; i++) {%>
-            <a href=""><%= data[i].first_name %></a>
-            <a href=""><%= data[i].last_name %></a>
+            <a href="<%= data[i].url %>"><%= data[i].first_name %> <%= data[i].last_name %></a>
             <br></br>
         <% } %>          
     </body>
