Can add fields and publishers to database

--- a/views/viewBy.ejs
+++ b/views/viewBy.ejs
@@ -7,7 +7,7 @@
     <div>
         <div>
             <div>
-                All:
+                View:
             </div>
             <ul>
                 <li>
@@ -29,23 +29,20 @@
         </div>
         <div>
             <div>
-                Create New:
+                Create a:
             </div>
             <ul>
                 <li>
-                    <a href="">Book</a>
+                    <a href="/catalog/book/create">Book</a>
                 </li>
                 <li>
-                    <a href="">Field</a>
+                    <a href="/catalog/field/create">Field</a>
                 </li>
                 <li>
-                    <a href="">Difficulty</a>
+                    <a href="/catalog/author/create">Author</a>
                 </li>
                 <li>
-                    <a href="">Author</a>
-                </li>
-                <li>
-                    <a href="">Publisher</a>
+                    <a href="/catalog/publisher/create">Publisher</a>
                 </li>
             </ul>
         </div>
