Added home link

--- a/views/bookList.ejs
+++ b/views/bookList.ejs
@@ -16,6 +16,7 @@
                 <%= data[i].author[j].last_name %>
             <% } %>
             <br></br>
-        <% } %>          
+        <% } %> 
+        <%- include("home"); -%>         
     </body>
 </html>
